Windows DirectX ready to write renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     message(INFO " - building for Windows....")
     include(${PROJECT_SOURCE_DIR}/cmake/Windows.cmake)
     add_executable(openttd WIN32 ${PROJECT_SOURCE_DIR}/src/os/windows/Main.cpp)
+    set_target_properties(openttd PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE" LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
 else()
     message(FATAL_ERROR "system not supported")
 endif()
